2012-05-23  Seiko Epson Corporation <linux-printer@epson.jp>
	* db/source/printer/Epson-LP-M5300.xml: Added a new printer.xml


2012-03-08 David Williams <dwilliams@ricohsv.com>
        * db/source/PPD/Ricoh/PS/Ricoh-Aficio_MP_C3502_PS.ppd,
          db/source/PPD/Ricoh/PXL/Ricoh-Aficio_MP_C3502_PXL.ppd,
          db/source/printer/Ricoh-Aficio_MP_C3502.xml:
          added files for a new printer.

2012-03-23  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Brother-HL-5250DN.xml: Removed relationships with
	  "pxlmono" and "lj5gray" drivers. These drivers do not perform
	  well with this printer.

2012-03-22  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/hpijs-pcl5c.xml: Added Xerox Phaser 3160N to the HPIJS
	  PCL 5c driver. This printer also works with this driver.
	  (Ubuntu bug #945294).

2012-03-08 David Williams <dwilliams@ricohsv.com>
      * db/source/printer/Lanier-SP_5200DN.xml,
        db/source/printer/Lanier-SP_5200S.xml,
        db/source/printer/Lanier-SP_5210DN.xml,
        db/source/printer/Lanier-SP_5210SF.xml,
        db/source/printer/Lanier-SP_5210SR.xml,
        db/source/printer/NRG-SP_5200DN.xml,
        db/source/printer/NRG-SP_5200S.xml,
        db/source/printer/NRG-SP_5210DN.xml,
        db/source/printer/NRG-SP_5210SF.xml,
        db/source/printer/NRG-SP_5210SR.xml,
        db/source/printer/Savin-SP_5200DN.xml,
        db/source/printer/Savin-SP_5200S.xml,
        db/source/printer/Savin-SP_5210DN.xml,
        db/source/printer/Savin-SP_5210SF.xml,
        db/source/printer/Savin-SP_5210SR.xml:
        Fixed more driver names in info files.

2012-03-07 David Williams <dwilliams@ricohsv.com>
      * db/source/printer/Gestetner-MP2352_DSm923.xml,
        db/source/printer/Gestetner-MP2852_DSm928.xml,
        db/source/printer/Gestetner-MP3352_DSm933.xml,
        db/source/printer/Infotec-MP_2352.xml,
        db/source/printer/Infotec-MP_2852.xml,
        db/source/printer/Infotec-MP_3352.xml,