@@ -348,7 +348,6 @@
     <printer>
       <id>printer/Epson-PM-G4500</id>
     </printer>
-
     <printer>
       <id>printer/Epson-PM-G850</id>
     </printer>
@@ -927,6 +926,18 @@
     </printer>
     <printer>
       <id>printer/Epson-WP-4595</id>
+    </printer>
+    <printer>
+      <id>printer/Epson-EP_4004</id>
+    </printer>
+    <printer>
+      <id>printer/Epson-1430_Series</id>
+    </printer>
+    <printer>
+      <id>printer/Epson-1500_Series</id>
+    </printer>
+    <printer>
+      <id>printer/Epson-Artisan_1430_Series</id>
     </printer>
   </printers>
 </driver>
