@@ -1,0 +1,40 @@
+<printer id="printer/Epson-Artisan_1430_Series">
+  <make>Epson</make>
+  <model>Artisan 1430 Series</model>
+  <mechanism>
+    <inkjet />
+    <color />
+    <resolution>
+      <dpi>
+        <x>5760</x>
+        <y>1440</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <url>http://www.epson.com/</url>
+  <autodetect>
+    <general>
+      <ieee1284>MFG:EPSON;CMD:ESCPL2,BDC,D4,D4PX,ESCPR2;Artisan 1430;CLS:PRINTER;DES:EPSON Artisan 1430</ieee1284>
+      <commandset>ESCPL2,BDC,D4,D4PX,ESCPR2</commandset>
+      <description>EPSON Artisan 1430</description>
+      <manufacturer>EPSON</manufacturer>
+      <model>Artisan 1430</model>
+    </general>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>epson-201114w</driver>
+  <drivers>
+    <driver>
+      <id>epson-201114w</id>
+    </driver>
+    <driver>
+      <id>epson-escpr</id>
+    </driver>
+ </drivers>
+  <comments>
+    <en>
+      Epson color inkjet printer.&lt;p&gt;
+      Maximum paper width: 21.0 cm / 8.3 inches&lt;p&gt;
+    </en>
+  </comments>
+</printer>
