@@ -1,3 +1,9 @@
+2012-05-28  Seiko Epson Corporation <linux-printer@epson.jp>
+	* db/source/printer/Epson-1430_Series.xml,
+	  db/source/printer/Epson-1500_Series.xml,
+	  db/source/printer/Epson-Artisan_1430_Series,
+	  db/source/printer/Epson-EP_4004.xml: Added new printer.xml
+
 2012-05-23  Seiko Epson Corporation <linux-printer@epson.jp>
 	* db/source/printer/Epson-LP-M5300.xml: Added a new printer.xml
 
